# rust-linked-lists

./: Cargo.toml  README.md  justfile
nix/modules/: devshell.nix  rust.nix
src/: first.rs  second.rs  third.rs
