[package]
authors = ["Abhishek Singh <abhishek17513@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "rust-linked-lists"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
